Ensure alignfull blocks take up the full available width between 600-768px
Previously, these were set to 100% width between those breakpoints, which meant they didn't end up taking up the full widh after all.

--- a/style-editor.scss
+++ b/style-editor.scss
@@ -33,8 +33,8 @@ body {
 	@include media(mobile) {
 
 		.wp-block[data-align="full"] {
-			position: relative;
-			left: 45px;
+			width: calc( 100% + 90px );
+			max-width: calc( 100% + 90px );
 		}
 	}
 
